feat: consume messages from broker - add services configurations

--- a/kubernetes/microservices-analysis.yaml
+++ b/kubernetes/microservices-analysis.yaml
@@ -27,6 +27,11 @@ spec:
             secretKeyRef:
               name: vault-access-secret
               key: VAULT_ADDRESS
+        - name: ENVIRONMENT
+          valueFrom:
+            secretKeyRef:
+              name: vault-access-secret
+              key: ENVIRONMENT
         resources:
           limits:
             memory: "400Mi"
