--- a/source/Microservices.Analysis/Properties/launchSettings.json
+++ b/source/Microservices.Analysis/Properties/launchSettings.json
@@ -6,7 +6,10 @@
             "commandName": "Project",
             "environmentVariables":
             {
-                "DOTNET_ENVIRONMENT": "Development"
+                "DOTNET_ENVIRONMENT": "Development",
+                "ENVIRONMENT": "development",
+                "VAULT_TOKEN": "hvs.NEEecyuKLrRAb09LeX8dby6J",
+                "VAULT_ADDRESS": "http://vault.binesty.net"
             },
             "dotnetRunMessages": true
         },
