--- a/source/Microservices.Analysis/appsettings.Development.json
+++ b/source/Microservices.Analysis/appsettings.Development.json
@@ -5,6 +5,13 @@
         {
             "Default": "Information",
             "Microsoft.Hosting.Lifetime": "Information"
+        },
+
+        "Settings":
+        {
+            "Name": "analysis-occurrences",
+            "Description": "Analysis of occurrences to create opportunities",
+            "MaxMessagesProcessingInstance": 10000
         }
     }
 }
