--- a/source/Microservices.Analysis/appsettings.json
+++ b/source/Microservices.Analysis/appsettings.json
@@ -6,5 +6,12 @@
             "Default": "Information",
             "Microsoft.Hosting.Lifetime": "Information"
         }
+    },
+
+    "Settings":
+    {
+        "Name": "analysis-occurrences",
+        "Description": "Analysis of occurrences to create opportunities",
+        "MaxMessagesProcessingInstance": 10000
     }
 }
