--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,6 +15,13 @@ jobs:
       with:
         dotnet-version: 7.0.x
 
+    - name: Authorise NuGet
+      uses: StirlingLabs/GithubNugetAuthAction@main
+      with:
+        owner: ${{github.repository_owner}}
+        name: Packages-Microservices
+        token: ${{secrets.TOKEN_PACKAGES_READ}}
+
     - name: Restore dependencies
       run: dotnet restore
 
