--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -57,10 +57,18 @@ jobs:
           username: ${{ secrets.REGISTRY_USER }}
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
-      - name: Push images registry
-        run: |
-          docker build -t binesty.azurecr.io/microservices-analysis:${{ github.sha }} -f ./source/Microservices.Analysis/Dockerfile --build-arg ARG_ENVIRONMENT=production . 
-          docker push binesty.azurecr.io/microservices-analysis:${{ github.sha }}
+      - name: Publish
+        run: dotnet publish --configuration Release
+
+      - name: Tag built container with Azure Container Registry
+        uses: actions-hub/docker/cli@master
+        with:
+          args: tag microservices-analysis:${{ github.sha }} binesty.azurecr.io/microservices-analysis:${{ github.sha }}
+      
+      - name: Push built container to Azure Container Registry
+        uses: actions-hub/docker/cli@master
+        with:
+          args: push binesty.azurecr.io/microservices-analysis:${{ github.sha }}
 
       - name: Kustomize
         uses: imranismail/setup-kustomize@v2
