fix: add referente package build containers #15

--- a/source/Microservices.Analysis/Microservices.Analysis.csproj
+++ b/source/Microservices.Analysis/Microservices.Analysis.csproj
@@ -19,6 +19,7 @@
         <PackageReference Include="Binesty.Packages.Microservices" Version="1.0.12-preview001" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+        <PackageReference Include="Microsoft.NET.Build.Containers" Version="7.0.400" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     </ItemGroup>
 
