--- a/source/Microservices.Analysis/Microservices.Analysis.csproj
+++ b/source/Microservices.Analysis/Microservices.Analysis.csproj
@@ -8,6 +8,7 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <ContainerBaseImage>mcr.microsoft.com/dotnet/runtime:7.0</ContainerBaseImage>        
         <ContainerImageName>microservices-analysis</ContainerImageName>
+        <ContainerWorkingDirectory>/bin</ContainerWorkingDirectory>        
     </PropertyGroup>
 
     <ItemGroup>
