--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,15 +67,19 @@ jobs:
           DOCKER_USERNAME: ${{ secrets.REGISTRY_USER }}
           DOCKER_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
 
+      - name: Git Version
+        id: version
+        uses: codacy/git-version@2.7.1
+
       - name: Tag built container with Azure Container Registry
         uses: actions-hub/docker/cli@master
         with:
-          args: tag microservices-analysis:1.0.0 binesty.azurecr.io/microservices-analysis:${{ github.sha }}
+          args: tag microservices-analysis:1.0.0 binesty.azurecr.io/microservices-analysis:${{ steps.version.outputs.version }}
       
       - name: Push built container to Azure Container Registry
         uses: actions-hub/docker/cli@master
         with:
-          args: push binesty.azurecr.io/microservices-analysis:${{ github.sha }}
+          args: push binesty.azurecr.io/microservices-analysis:${{ steps.version.outputs.version }}
 
       - name: Kustomize
         uses: imranismail/setup-kustomize@v2
@@ -83,7 +87,7 @@ jobs:
       - name: Update image tag version
         run: |
           cd kubernetes
-          kustomize edit set image microservices-analysis=binesty.azurecr.io/microservices-analysis:${{ github.sha }}
+          kustomize edit set image microservices-analysis=binesty.azurecr.io/microservices-analysis:${{ steps.version.outputs.version }}
 
       - name: Commit image tag version 
         run: |
