chore: set image tag default #25

--- a/source/Microservices.Analysis/Microservices.Analysis.csproj
+++ b/source/Microservices.Analysis/Microservices.Analysis.csproj
@@ -7,7 +7,8 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
         <ContainerRuntimeIdentifier>linux-x64</ContainerRuntimeIdentifier>
         <ContainerBaseImage>mcr.microsoft.com/dotnet/runtime:7.0</ContainerBaseImage>
-        <ContainerRepository>microservices-analysis</ContainerRepository>        
+        <ContainerRepository>microservices-analysis</ContainerRepository>
+        <ContainerImageTag>latest</ContainerImageTag>
     </PropertyGroup>
 
     <ItemGroup>
