--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,7 +74,7 @@ jobs:
       - name: Tag built container with Azure Container Registry
         uses: actions-hub/docker/cli@master
         with:
-          args: tag microservices-analysis:1.0.0 binesty.azurecr.io/microservices-analysis:${{ steps.version.outputs.version }}
+          args: tag microservices-analysis:latest binesty.azurecr.io/microservices-analysis:${{ steps.version.outputs.version }}
       
       - name: Push built container to Azure Container Registry
         uses: actions-hub/docker/cli@master
