--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -47,8 +47,10 @@ jobs:
     name: version
     steps:
       - uses: actions/checkout@v3
+      - name: Fetch unshallow
+        run: git fetch --prune --tags --unshallow
       - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0
+        uses: gittools/actions/gitversion/setup@v0.9.7
         with:
           versionSpec: '5.x'
 
