--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
 - microservices-analysis.yaml
 - scaler.yaml
 
-namespace: workspace
+namespace: business
 images:
 - name: microservices-analysis
   newName: binesty.azurecr.io/microservices-analysis
