--- a/kubernetes/microservices-analysis.yaml
+++ b/kubernetes/microservices-analysis.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: microservices-analysis
-  namespace: workspace
+  namespace: business
 spec:
   replicas: 1
   selector:
