cd: set a pull before commit actions #25

--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -103,6 +103,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "${{ github.actor }}"
+          git pull
           git commit -am '${{ github.event.head_commit.message }}'
       
       - name: Push changes
