--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create Tags
-        uses: anothrNick/github-tag-action@v1.67.0
+        uses: anothrNick/github-tag-action@1.64.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: false
