--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -73,8 +73,23 @@ jobs:
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0
 
+      - name: Set version in projects
+        id: update
+        uses: vers-one/dotnet-project-version-updater@v1.3
+        with:
+          file: |
+            "**/*.csproj", "**/*.nuspec", "**/AssemblyInfo.cs"
+          version: ${{ steps.gitversion.outputs.majorMinorPatch }}
+
+      - run: |
+          git config user.name "${{ github.actor }}" 
+          git config user.email "action@github.com"
+          git add .
+          git commit -m "Update project versions to ${{ steps.gitversion.outputs.semVer }}}"
+          git push
+
       - name: Publish
-        run: dotnet publish --os linux --arch x64 /t:PublishContainer -c Release
+        run: dotnet publish --version-suffix=${{ steps.gitversion.outputs.preReleaseTag }} /t:PublishContainer -c Release
 
       - name: Docker Login
         uses: actions-hub/docker/login@master
