--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -77,9 +77,8 @@ jobs:
         id: update
         uses: vers-one/dotnet-project-version-updater@v1.3
         with:
-          file: |
-            "**/*.csproj", "**/*.nuspec", "**/AssemblyInfo.cs"
-          version: ${{ steps.gitversion.outputs.majorMinorPatch }}
+          file: "source/Microservices.Analysis.csproj"
+          version: ${{ steps.gitversion.outputs.majorMinorPatch }}          
 
       - run: |
           git config user.name "${{ github.actor }}" 
