--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -73,21 +73,21 @@ jobs:
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0
 
-      - name: Set version in projects
+      - name: Set version in project
         id: update
-        uses: vers-one/dotnet-project-version-updater@v1.3
+        uses: Thundernerd/dotnet-project-version-updater@v1.2
         with:
-          file: "source/**/*.csproj"
-          version: ${{ steps.gitversion.outputs.majorMinorPatch }}          
+          file: "source/Microservices.Analysis/Microservices.Analysis.csproj"
+          version: ${{ steps.gitversion.outputs.majorMinorPatch }}
 
       - run: |
-          git config user.name "${{ github.actor }}" 
+          git config user.name  "${{ github.actor }}"
           git config user.email "action@github.com"
           git add .
-          git commit -m "Update project versions to ${{ steps.gitversion.outputs.semVer }}}"
+          git commit -m "Update project version to  ${{ steps.gitversion.outputs.majorMinorPatch }}"
           git push
 
-      - name: Publish
+      - name: Publish project with version
         run: dotnet publish --version-suffix=${{ steps.gitversion.outputs.preReleaseTag }} /t:PublishContainer -c Release
 
       - name: Docker Login
