--- a/.github/workflows/development.yaml
+++ b/.github/workflows/development.yaml
@@ -73,13 +73,19 @@ jobs:
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0
 
-      - name: Update version on project
-        uses: SiqiLu/dotnet-bump-version@2.1.0
+      - name: Set version in project
+        id: update
+        uses: Thundernerd/dotnet-project-version-updater@v1.2
         with:
-            version_files: "source/**/*.csproj"
-            version_mask: 0.0.1.0
-            version_overwrite: "${{ steps.gitversion.outputs.majorMinorPatch }}.${{ steps.gitversion.outputs.weightedPreReleaseNumber }}"
-            github_token: ${{ secrets.GITHUB_TOKEN }}
+          file: "source/Microservices.Analysis/Microservices.Analysis.csproj"
+          version: "${{ steps.gitversion.outputs.majorMinorPatch }}.${{ steps.gitversion.outputs.weightedPreReleaseNumber }}"
+
+      - run: |
+          git config user.name  "${{ github.actor }}"
+          git config user.email "action@github.com"
+          git add .
+          git commit -m "Update project version to  ${{ steps.gitversion.outputs.majorMinorPatch }}.${{ steps.gitversion.outputs.weightedPreReleaseNumber }}"
+          git push
 
       - name: Publish project with version
         run: dotnet publish --version-suffix=${{ steps.gitversion.outputs.preReleaseTag }} /t:PublishContainer -c Release
