--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,8 +74,22 @@ jobs:
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0
 
-      - name: Publish
-        run: dotnet publish --os linux --arch x64 /t:PublishContainer -c Release
+      - name: Set version in project
+        id: update
+        uses: Thundernerd/dotnet-project-version-updater@v1.2
+        with:
+          file: "source/Microservices.Analysis/Microservices.Analysis.csproj"
+          version: "${{ steps.gitversion.outputs.majorMinorPatch }}.${{ steps.gitversion.outputs.weightedPreReleaseNumber }}"
+
+      - run: |
+          git config user.name  "${{ github.actor }}"
+          git config user.email "action@github.com"
+          git add .
+          git commit -m "Update project version to  ${{ steps.gitversion.outputs.majorMinorPatch }}.${{ steps.gitversion.outputs.weightedPreReleaseNumber }}"
+          git push
+
+      - name: Publish project with version
+        run: dotnet publish --version-suffix=${{ steps.gitversion.outputs.preReleaseTag }} /t:PublishContainer -c Release
 
       - name: Docker Login
         uses: actions-hub/docker/login@master
