--- a/source/Microservices.Analysis/Microservices.Analysis.csproj
+++ b/source/Microservices.Analysis/Microservices.Analysis.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
     <PropertyGroup>
-        <Version>0.2.0.16</Version>
+        <Version>0.2.0.19</Version>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>        
